# Hdl21BagPorting

./: .bashrc_pypath  .gitignore  export.py  import.py  import_a_dummy_bag_project.py  order.json  ordered_paths.json  paths.json  porting.py  pyproject.toml  readme.md  run.py
bagporting/: code.py  data.py  dostuff.py  schematic.py  schematic_module.py  the_part_that_needs_bag.py  wip.py
data/: order.json
