[tool.poetry]
authors = ["Dan Fritchman <dan@fritch.mn>"]
description = "Bag Schematics to Hdl21 Porting Utility"
name = "bagporting"
version = "0.1.0"

[tool.poetry.dependencies]
hdl21 = ">=2.0"
pydantic = ">=1.9.1"
python = ">=3.7,<3.11"
black = "22.6.0"
"ruamel.yaml" = "*"

[tool.poetry.dev-dependencies]
black = "22.6.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
